[package]
name = "el-nino"
version = "0.1.0"
authors = ["Eve <eve@eatbigger.fish>"]
edition = "2018"

[dependencies]
futures = "*"
ridb-client = { git = "https://github.com/ships/ridb" }
ridb-client-extras = { git = "https://github.com/ships/ridb-etc" }
# ridb-client = { path = "../ridb" }

[dev-dependencies]
double = "*"
